Finzalizaçao da seção 8 do Curso "Java Servlet: Fundamentos da programação web Java": A importância do web.xml; O que é inversão de controle; Como gerar o WAR (Web ARchive); Como fazemos o deploy da nossa aplicação.

--- a/servlets/curso 1/manager/WebContent/bem-vindo.html
+++ b/servlets/curso 1/manager/WebContent/bem-vindo.html
@@ -1,5 +1,10 @@
+<!DOCTYPE html> 
 <html>
+	<head>
+		<meta charset="UTF-8">
+		<title>Bem vindo!</title>
+	</head>
 	<body>
-		Hello World!
+			Bem vindo à aplicação do curso de Servlets da Alura!
 	</body>
 </html>
